# sql-library-manager

./: README.md  main.py  pyproject.toml  requirements.txt
database/: db.py  setup.sql
pages/: about.py  add_book.py  display_books.py  remove_book.py  search_book.py  statistics.py
